Refactor Waste class methods to use ArrayList indexing and add method to retrieve all cards