@@ -16,17 +16,21 @@ public class Waste {
     }
 
     public Card getTopCard() {
-        return cards.isEmpty() ? null : cards.getLast();
+        return cards.isEmpty() ? null : cards.get(cards.size() - 1);
     }
 
     public Card removeTopCard() {
-        return cards.isEmpty() ? null : cards.removeLast();
+        return cards.isEmpty() ? null : cards.remove(cards.size() - 1);
     }
 
     public List<Card> removeAllCards() {
         List<Card> temp = new ArrayList<>(cards);
         cards.clear();
         return temp;
+    }
+
+    public List<Card> getAllCards() {
+        return new ArrayList<>(cards);
     }
 
     public boolean isEmpty() {
